[gd_scene load_steps=30 format=2]

[ext_resource path="res://Sprites/Crabs/Walk/BlackCrabA.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Crabs/Walk/CyanCrabB.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Crabs/Walk/BlackCrabB.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Crabs/Walk/GreenCrabB.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Crabs/Walk/OrangeCrabA.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Crabs/Walk/GreenCrabA.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Crabs/Walk/BlueCrabA.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Crabs/Walk/CyanCrabA.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Crabs/Walk/BlueCrabB.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Crabs/Walk/PurpleCrabB.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Crabs/Walk/VioletCrabA.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Crabs/Walk/WhiteCrabB.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Crabs/Walk/RainbowCrabB.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Crabs/Walk/VioletCrabB.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Crabs/Walk/OrangeCrabB.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Crabs/Walk/WhiteCrabA.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Crabs/Walk/YellowCrabA.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Crabs/Walk/PurpleCrabA.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Crabs/Walk/RainbowCrabA.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Crabs/Walk/YellowCrabB.png" type="Texture" id=22]
[ext_resource path="res://Enemies/Crab.gd" type="Script" id=23]
[ext_resource path="res://Misc. Assets/crab_hit_sound.wav" type="AudioStream" id=24]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=25]
[ext_resource path="res://Enemies/Wander_Controller.tscn" type="PackedScene" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "black",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "green",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 2 ) ],
"loop": true,
"name": "cyan",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 16 ) ],
"loop": true,
"name": "orange",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 22 ) ],
"loop": true,
"name": "yellow",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 11 ) ],
"loop": true,
"name": "purple",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 15 ) ],
"loop": true,
"name": "violet",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 13 ) ],
"loop": true,
"name": "white",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 14 ) ],
"loop": true,
"name": "rainbow",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 80.0
height = 450.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 208.0
height = 254.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 52.0
height = 29.333

[sub_resource type="CircleShape2D" id=5]
radius = 3000.0

[node name="Crab" type="KinematicBody2D"]
scale = Vector2( 0.015, 0.015 )
collision_layer = 0
collision_mask = 66
script = ExtResource( 23 )
MAX_SPEED = 100

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "cyan"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 19 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( -1, 19 )
rotation = 1.5708
collision_layer = 4
collision_mask = 160

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 0.196078, 1, 0, 1 )
position = Vector2( -19, -0.999878 )
shape = SubResource( 3 )

[node name="HitBoxA" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxA"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -266.666, -133.333 )
shape = SubResource( 4 )

[node name="HitBoxB" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxB"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 266.666, -133.333 )
shape = SubResource( 4 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 25 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 5 )

[node name="Wander_Controller" parent="." instance=ExtResource( 26 )]

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="PlayerDetectionZone"]
